bug: TRN-185 #40 improved readability of sidebar tooltips

--- a/frontend/src/app/sidebar-menu/sidebar-menu.component.scss
+++ b/frontend/src/app/sidebar-menu/sidebar-menu.component.scss
@@ -162,6 +162,7 @@ button tui-svg {
   left: 125px;
   top: 50%;
   transform: translate(-50%, -50%);
+  background-color: #fff;
   box-shadow: 0 0.5rem 0.8rem rgba(0, 0, 0, 0.2);
   border-radius: 0.6rem;
   padding: 0.4rem 1.2rem;
